xubuntu-fifteen/style.css
/*
 *  Theme Name: Xubuntu Fifteen
 *  Theme URI: https://xubuntu.org/
 *  Description: A theme built for the Xubuntu website at xubuntu.org.
 *
 *  Author: Pasi Lallinaho
 *  Author URI: http://open.knome.fi/
 *
 *  Version: 2016-sept (r117)
 *
 */

body {
	font-size: small;
	font-family: 'Open Sans', sans-serif;
	font-weight: 500;
	line-height: 1.5em;

	background-color: #e4e4e4;
	color: #444;

	min-height: 760px;
}

/*
 *  Content width
 *
 */

header #logo, header nav, header::after,
#content,
.widgets_front .widgets,
footer {
	width: 90%;
	margin: 0 auto;

	max-width: 1400px;

	clear: both;
}

/*
 *  Header
 *
 */

header {
	background: #0e82d0 linear-gradient( to right top, rgba( 0, 0, 0, 0 ), rgba( 0, 0, 0, 0.15 ) );
/*	background-color: #0e82d0;
	background-image: linear-gradient( to right top, rgba( 0, 0, 0, 0 ), rgba( 0, 0, 0, 0.15 ) ), url(images/header.png);
	background-position: 0 0, auto 50%;
	background-repeat: no-repeat; */

	box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );
}
	header a { border-bottom: none !important; }
	header ul { margin-bottom: 0; }

	header::after {
		content: " ";
		display: block;
		position: relative;
		height: 150px;

		top: -150px;
		left: -50px;
		margin-bottom: -150px;
		padding: 0 50px;

		background: transparent url(images/header.png) 0 50% no-repeat;
	}

 	#logo {
		position: relative;
		z-index: 1;

		padding: 1.6em 0 1.2em;
		color: #fff;
	}
	#navi {
		position: relative;
		z-index: 1;

		font-size: 90%;
		background-color: rgba( 0, 0, 0, 0.2 );
	}
		nav#navi_quick,
		#opennavi {
			display: none;
		}

/*
 *  Main content area
 * 
 */

section#middle {
	padding: 1.5em 0;

	background-color: #eee;
	box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );
}
	#content {
		display: flex;
		padding: 1.8em 2.2em;

		font-size: 110%;

		background-color: #fafafa;
		border-radius: 4px;
		box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );
	}
		main {
			flex: 68;
		}
		aside {
			flex: 32;
			margin-left: 2em;

			font-size: 90%;
		}
			aside > :first-child {
				margin-top: 0;
			}

body.home section#middle {
	background-color: #f8f8f8;
	padding: 0;
}
	body.home #content {
		padding: 0;

		background-color: transparent;
		box-shadow: none;
	}
		body.home main {
			padding: 2em 0 1em 0;
		}
			body.home main .post-post { margin: 0; }
			body.home main h1 { margin-top: 0 !important; }

/*
 *  Footer
 *
 */

footer {
	margin-top: 1em;
	padding: 2px;
	font-size: 80%;
	color: #555;
}
	footer .widgets {
		padding-bottom: 1.5em;
		margin-bottom: 1.5em;
		border-bottom: 1px dotted #aaa;
	}
		nav#footer_navi .menu .sub-menu {
			font-size: 110%;
		}

/*
 *  Post styles
 *
 */

.post-post {
	color: #333;
	margin: 1.5em 0 0.5em 0;
}
	.post-post > :last-child {
		margin-bottom: 0;
	}

.post-meta,
.post-meta a {
	color: rgba( 0, 0, 0, 0.2 );
}
	.post-meta span a {
		transition: all 0.5s ease-in-out;
	}
	.post-meta span a:hover,
	.post-meta span a:focus {
		color: rgba( 0, 0, 0, 0.5 );
	}

/*
 *  Navigation
 *
 */

.navigation .menu a {
	display: block;
	width: 90%;
}
	.navigation .menu > li > a {
		font-size: 125%;
		color: #333;
		border-bottom: none;
	}
	.navigation .menu .sub-menu {
		font-size: 100%;
	}
	.navigation .menu .menu-item-has-children ul {
		margin: 0.5em 0 1.5em 0;
	}

/*  Navigation, dropdown  */

.navigation.nd {
	border-left: 1px solid rgba( 0, 0, 0, 0.2 );
}

.navigation.nd .menu {
	display: block;

	margin-bottom: 0;
	padding: 0;
}
	.navigation.nd .menu li {
		float: left;
	}
		.navigation.nd .menu li a {
			width: auto;
			display: block;
			padding: 0.5em 15px;
			margin: 0;
			color: #fff;
		}
			.navigation.nd .menu > li > a {
				font-size: 115%;
				font-weight: 600;
			}
		.navigation.nd .menu > li {
			height: 3em;
			margin-left: 0;

			border-left: 1px solid rgba( 255, 255, 255, 0.2 );
			border-right: 1px solid rgba( 0, 0, 0, 0.2 );
		}
			.navigation.nd .menu > li:last-child::after {
				content: "";
				position: relative;
				float: left;
				height: 100%;

				top: -2.95em;
				left: 100%;
				margin-left: 1px;
				border-right: 1px solid rgba( 255, 255, 255, 0.2 );
			}
			.navigation.nd .menu > li:last-child:hover::after {
				top: -3.85em;
			}


	/*  Hovered menu items  */
	.navigation.nd .menu > li:hover {
		background-color: rgba( 0, 0, 0, 0.1 );
		position: relative;
	}
		.navigation.nd .menu > li:hover > a {
			position: relative;
			z-index: 1100;
			padding-bottom: 1.3em;
		}
		.navigation.nd .menu > li.menu-item-has-children:hover > a {
			background: transparent url(images/arrowup.png) 50% 2.3em no-repeat;
		}

	/*  Submenus  */
	.navigation.nd .menu .sub-menu {
		display: none;

		position: absolute;
		z-index: 1000;
		top: 3.2em;
		left: 0;

		width: 200px;
		padding: 0.5em 0;

		border-radius: 3px;
	}
		.navigation.nd li:first-child .sub-menu {
			left: -2px;
		}
		.navigation.nd li:last-child .sub-menu {
			left: 0;
		}
		.navigation.nd .sub-menu li {
			display: block;
			width: 100%;
		}

		/*  Submenu hover  */
		.navigation.nd .menu li:hover .sub-menu {
			display: block;
			z-index: 900;

			background-color: #eee;
		}
			.navigation.nd .menu > li:hover .sub-menu {
				z-index: 1000;
				background-color: #fff;
				box-shadow: 0 0 10px rgba( 0, 0, 0, 0.2 );
			}

		.navigation.nd .sub-menu li a {
			display: block;

			font-size: 110%;
			color: #555;
			padding: 0.35em 1em;
			border: none;
		}
			.navigation.nd .sub-menu a:hover,
			.navigation.nd .sub-menu a:active,
			.navigation.nd .sub-menu a:focus {
				color: #2c82dd;
			}

#navi .expand {
	display: none;
}

/*  Navigation, horizontal  */

.navigation.nh .menu {
	display: flex;
}
	.navigation.nh .menu > li {
		float: left;
		width: 15%;

		box-sizing: border-box;
		flex-grow: 1;

		padding: 0 1.5em;
	}
		.navigation.nh .menu a {
			width: 100%;
			line-height: 1.3em;
			padding: 0.2em 0;
		}
		.navigation.nh .menu > li {
			border-right: 1px solid rgba( 0, 0, 0, 0.10 );
		}
			.navigation.nh .menu .sub-menu {
				margin-bottom: 0;
			}
			.navigation.nh .menu > li:first-child {
				padding-left: 0;
			}
			.navigation.nh .menu > li:last-child {
				padding-right: 0;
				border-right: none;
			}

/*
 *  Widget areas
 *
 */

.widgets_flex .widgets {
	display: flex;
}
	.widgets_flex .widget {
		float: left;
		width: 25.1%;

		box-sizing: border-box;
		flex-grow: 1;

		padding: 0 1.5em;

		border-right: 1px dotted rgba( 0, 0, 0, 0.2 );
	}
		.widgets_flex .widget:first-child {
			padding-left: 0;
		}
		.widgets_flex .widget:last-child {
			border-right: none;
			padding-right: 0;
		}
		.widgets_flex .widget p:last-child {
			margin-bottom: 0;
		}

/*
 *  Templates
 *
 */

/*  Attachments browsing  */

.attachment_navi {
	text-align: center;
}
	.attachment_navi .button:last-child {
		margin-right: 0;
	}

/*  Classes for menus  */

.menu .strong {
	font-weight: 600;
}

/*  Featured image  */

.post-thumbnail {
	float: right;
	margin: -1em 0 2em 2em;

	max-width: 400px;
	height: auto;
}
	.post-thumbnail img {
		border-radius: 0;
		box-shadow: none;
	}

/*  Featured image on the front page  */

body.home .post-thumbnail {
	margin-top: 0;
}
body.home main h1 {
	display: inline;
}
	body.home main h1:after {
		display: block;
		content: "";
		margin-bottom: 1em;
	}

/*  Featured image in a gallery  */

.featured {
	margin-bottom: 2em;
}
	.featured .image {
		float: left;
		width: 50%;
	}
		.featured .image img {
			max-width: 100%;
			float: right;
			height: auto;

			border-radius: 3px;
			box-shadow: 1px 1px 5px rgba( 0, 0, 0, 0.2 );
		}

	.featured .description {
		float: right;
		width: 45%;
	}
		.featured .description h2:first-child {
			margin-top: 0;
		}

/*  Home page widgets  */

body.home .widgets_outer {
	padding: 1em 0;
	margin-bottom: 1em;
}
	body.home .widgets_outer#front,
	body.home .widgets_outer#front-3 {
		padding: 2em 0;
		background-color: #fff;
		box-shadow: 0 0 10px rgba( 0, 0, 0, 0.1 );
	}
	body.home .widgets_outer:last-child {
		padding-bottom: 2em;
	}

/*  Post lists  */

.posts-list li {
	list-style-type: none;
	margin-left: 0;
}
	.posts-list li .post-time {
		display: inline-block;
		width: 25%;
		margin-right: 0.25em;
	}

/*  Post pagination  */

main .post + .post,
.post-pagination {
	margin-top: 2em;
	padding-top: 1.25em;
	border-top: 1px dotted rgba( 28, 80, 161, 0.5 );
}
.post-pagination {
	margin-bottom: 0;
	font-size: 90%;
	border-top-color: rgba( 0, 0, 0, 0.5 );
}

/*  Release archive information  */

dl.release-info {
	margin-bottom: 1em;
}
	dl.release-info dt {
		float: left;
		clear: both;

		width: 25%;
		margin-right: 5px;

		font-weight: bold;
	}
	dl.release-info dd {
		float: left;
	}
	dl.release-info dd.eol::after {
		content: "Unsupported";
		margin-left: 0.5em;
		color: rgba( 200, 0, 0, 1 );
	}

/*  Release lists  */

.releases .nobullet::before {
	content: " " !important;
}
.releases .show-eol {
	color: rgba( 0, 0, 0, 0.5 );
	margin-left: -1em;
}
.releases .eol a::before {
	content: "EOL";
	font-size: 90%;
	margin-right: 0.5em;
	color: rgba( 0, 0, 0, 0.5 );
}

/*  Search form  */

.search-form {
	display: flex;
}
	.search-form label {
		/* Search input box */
		flex: 3;
		margin-right: 0.5em;
	}
		.search-form label input {
			width: 100%;
		}
	.search-form .search-submit {
		flex: 1;
	}

/*  Tagclouds  */

.tagcloud a {
	display: block;
	font-size: 100% !important;
	margin-left: 1em;
	margin-bottom: 0.2em;
}
	.tagcloud a {
		border-bottom: none !important;
	}
	.tagcloud a::before {
		/* Imitates the list style */
		display: block;
		float: left;

		width: 0.7em;
		margin-left: -0.7em;
		margin-top: -0.12em;
		content: "›";
		font-weight: 300;
		font-size: 140%;
		color: #555;
	}

